@@ -57,6 +57,8 @@ Changes
     (PR #4174, Issue #3819)
 
 Deprecations
+  * Incorrectly spelt Boltzmann unit entry will be removed in version 2.8.0
+    (PR #4230, Issue #4229)
   * The hole2 module is deprecated in favour of the the MDAKit:
     https://github.com/MDAnalysis/hole2-mdakit (Issue #4179, PR #4200)
   * MDAnalysis no longer officially supports 32 bit installations (they are
